@@ -14,13 +14,12 @@
  * limitations under the License.
  */
 
-/* 
- * TODO: Elaborate more onto the package description, like in the pacio
- * package.
+/*
+ * TODO: Elaborate more onto the package description.
  */
 
 /**
- * <p>The file package of the PacIO library. It handles generic IO
- * handling to the system's disk.</p>
+ * <p>The utility package of the PacIO library. It contains helper classes
+ * for the library.</p>
  */
-package io.github.thatgarlicdude.pacio.file;
+package io.github.thatgarlicdude.pacio.util;
